# TechnoparkML_C

./: .gitignore  README.md
.github/workflows/: hw_1.yml
homework_1/: CMakeLists.txt  main.c  my_string.c  my_string.h  test_toys.cpp  toy.c  toy.h  toys.c  toys.h
homework_2/: CMakeLists.txt
homework_2/lib/my_string/: CMakeLists.txt
homework_2/lib/my_string/include/: my_string.h
homework_2/lib/my_string/src/: my_string.c
homework_2/lib/my_string/tests/: CMakeLists.txt
homework_2/lib/my_string/tests/src/: test_my_string.cpp
homework_2/lib/parallel_algorithm/: CMakeLists.txt
homework_2/lib/parallel_algorithm/include/: parallel.h
homework_2/lib/parallel_algorithm/src/: parallel.c
homework_2/lib/parallel_algorithm/tests/: CMakeLists.txt
homework_2/lib/parallel_algorithm/tests/src/: test_parallel.cpp
homework_2/lib/predicate_parser/: CMakeLists.txt
homework_2/lib/predicate_parser/include/: operators.h  parser.h
homework_2/lib/predicate_parser/src/: operators.c  parser.c
homework_2/lib/predicate_parser/tests/: CMakeLists.txt
homework_2/lib/predicate_parser/tests/src/: test_operators.cpp  test_parser.cpp
homework_2/lib/serial_algorithm/: CMakeLists.txt
homework_2/lib/serial_algorithm/include/: serial.h
homework_2/lib/serial_algorithm/src/: serial.c
homework_2/lib/serial_algorithm/tests/: CMakeLists.txt
homework_2/lib/serial_algorithm/tests/src/: test_serial.cpp
homework_2/src/: main.c
